--- a/frontend/src/pages/MainBookStore/MainBook.module.scss
+++ b/frontend/src/pages/MainBookStore/MainBook.module.scss
@@ -4,9 +4,17 @@
   width: 100%;
   display: grid;
   grid-template-columns: 25% 75%; /* Лівий блок - 30%, правий блок - 70% */
-  gap: 10px; /* Проміжок між блоками */
+  gap: 20px; /* Проміжок між блоками */
   // margin: 0 auto;
   // padding: 10px;
+
+  .titleBookStore {
+    display: flex;
+    justify-content: space-between;
+    font-size: clamp(0.875rem, 0.725rem + 0.75vw, 1.625rem);
+    font-weight: 500;
+    margin: 10px 10px 15px 0;
+  }
 
   .bookMain {
     max-width: 100%;
@@ -57,6 +65,7 @@
 
 @media (max-width: 1000px) {
   .wrapperBook {
+    gap: 10px;
     .bookMain {
       // border: 1px solid red;
       grid-template-columns: repeat(3, minmax(125px, 1fr));
