--- a/frontend/src/App/App.css
+++ b/frontend/src/App/App.css
@@ -34,17 +34,6 @@ nav a:hover {
   text-decoration: none;
 }
 
-/* Якщо створювати active стрілковою функцією */
-/* .activeLink {
-  color: lightyellow;
-  text-decoration: none;
-}
-
-.activeLink:hover {
-  color: lightyellow;
-  text-decoration: none;
-} */
-
 h1 {
   font-size: 40px;
   margin: 20px 0;
@@ -111,4 +100,10 @@ button:active {
 .item-sort-active {
   background-color: #6f6dec;
   border: 1px solid #6f6dec !important;
+}
+
+.home {
+  border: 1px solid #000;
+  width: 100%;
+  height: 80vh;
 }
