--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,4 +9,34 @@ body {
   height: 100vh;
   font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
     'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Колір заднього фону скроллбара */
+body::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Колір плаваючої частини скроллбара (полоси прокрутки) */
+body::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Виділення скроллбара при наведенні */
+body::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/* Закруглені кути скроллбара */
+body::-webkit-scrollbar-thumb:vertical {
+  border-radius: 3px;
+}
+
+/* Стиль прокручування при натисканні на скроллбар */
+body::-webkit-scrollbar-button {
+  display: none; /* Приховати кнопки */
 }
