--- a/frontend/src/pages/MainBookStore/MainBook.module.scss
+++ b/frontend/src/pages/MainBookStore/MainBook.module.scss
@@ -4,7 +4,7 @@
   width: 100%;
   display: grid;
   grid-template-columns: 25% 75%; /* Лівий блок - 30%, правий блок - 70% */
-  gap: 20px; /* Проміжок між блоками */
+  gap: 30px; /* Проміжок між блоками */
   // margin: 0 auto;
   // padding: 10px;
 
@@ -60,7 +60,60 @@
 }
 
 .filterBook {
-  border: 2px solid blue;
+  // border: 2px solid blue;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 6px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  font-size: 18px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  text-align: left;
+  padding: 5px 15px 15px;
+
+  div {
+    display: flex;
+    flex-direction: column;
+
+    input {
+      max-width: 100%;
+      border-radius: 6px;
+      outline: none;
+      border: none;
+      font-size: 18px;
+      padding: 8px;
+      margin-top: 8px;
+    }
+  }
+
+  .searchGenre {
+    p {
+      margin-bottom: 10px;
+    }
+
+    label {
+      display: flex;
+      margin-bottom: 5px;
+      max-width: fit-content;
+      cursor: pointer;
+
+      &:hover {
+        color: rgb(197, 170, 227);
+      }
+
+      input {
+        margin: 5px 5px 0 0;
+        cursor: pointer;
+
+        &:checked {
+          background-color: #aa89cf;
+          border-color: #aa89cf;
+        }
+      }
+    }
+  }
 }
 
 @media (max-width: 1360px) {
