--- a/frontend/src/layouts/Main.Layouts.module.scss
+++ b/frontend/src/layouts/Main.Layouts.module.scss
@@ -2,5 +2,12 @@
   max-width: 100%;
   display: flex;
   justify-content: center;
-  padding: 15px 15px 15px 10px;
+  padding: 15px 5px 15px 10px;
+  margin-right: 20px;
+}
+
+@media (max-width: 1000px) {
+  .container {
+    margin-right: 10px;
+  }
 }
