--- a/frontend/src/pages/MainBookStore/MainBook.module.scss
+++ b/frontend/src/pages/MainBookStore/MainBook.module.scss
@@ -2,9 +2,10 @@
   // border: 1px solid #000;
   max-width: 1280px;
   width: 100%;
+  min-height: 1000px;
   display: grid;
-  grid-template-columns: 25% 75%; /* Лівий блок - 30%, правий блок - 70% */
-  gap: 30px; /* Проміжок між блоками */
+  grid-template-columns: 25% 75%;
+  gap: 20px;
   // margin: 0 auto;
   // padding: 10px;
 
@@ -61,6 +62,7 @@
 
 .filterBook {
   // border: 2px solid blue;
+  position: relative;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 6px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
@@ -72,6 +74,16 @@
   gap: 15px;
   text-align: left;
   padding: 5px 15px 15px;
+
+  .resetBtn {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    width: 80px;
+    font-size: 12px;
+    padding: 4px;
+    margin: 0;
+  }
 
   div {
     display: flex;
@@ -104,7 +116,7 @@
       }
 
       input {
-        margin: 5px 5px 0 0;
+        margin: 2px 5px 0 0;
         cursor: pointer;
 
         &:checked {
@@ -118,8 +130,9 @@
 
 @media (max-width: 1360px) {
   .wrapperBook {
+    // grid-template-columns: 20% 80%;
     .bookMain {
-      grid-template-columns: repeat(4, minmax(125px, 1fr));
+      grid-template-columns: repeat(4, minmax(100px, 1fr));
     }
   }
 }
