--- a/frontend/src/widgets/Footer.module.scss
+++ b/frontend/src/widgets/Footer.module.scss
@@ -1,12 +1,16 @@
 .footer {
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin-top: 50px;
 
   .caption {
+    max-width: 1290px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     text-align: left;
+    // margin: 0 auto;
 
     ul {
       list-style-type: none;
