--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -41,25 +41,19 @@ body::-webkit-scrollbar-button {
   display: none; /* Приховати кнопки */
 }
 
+/* CONTACT PAGES TESTING */
 .pagesSort {
-  border: 1px solid #000;
+  /* border: 1px solid #000; */
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  flex-direction: row;
+  justify-content: center;
   gap: 10px;
-}
-
-.genreCheckbox > label,
-label > input {
-  cursor: pointer;
-}
-
-.genreCheckbox > label > input {
-  margin: 5px;
+  margin-bottom: 20px;
 }
 
 .bookGenre {
   /* border: 1px solid #000; */
+  height: 60vh;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 15px;
@@ -71,3 +65,8 @@ label > input {
   border-radius: 6px;
   padding: 6px;
 }
+
+.bookGenre div > p {
+  margin-bottom: 10px;
+}
+/* CONTACT PAGES TESTING */
