--- a/frontend/src/widgets/Footer.module.scss
+++ b/frontend/src/widgets/Footer.module.scss
@@ -9,6 +9,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     text-align: left;
     // margin: 0 auto;
 
@@ -26,7 +27,12 @@
         font-size: 16px;
       }
     }
+
+    .logoFooter {
+      text-align: center;
+    }
   }
+
   .protect {
     font-size: 14px;
     margin-top: 20px;
