--- a/frontend/src/layouts/Main.Layouts.module.scss
+++ b/frontend/src/layouts/Main.Layouts.module.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   padding: 0px 5px 15px 10px;
-  margin-right: 20px;
+  margin: 10px;
 }
 
 @media (max-width: 1000px) {
