--- a/frontend/src/pages/MainBookStore/MainBook.module.scss
+++ b/frontend/src/pages/MainBookStore/MainBook.module.scss
@@ -6,7 +6,7 @@
   display: grid;
   grid-template-columns: 25% 75%;
   gap: 20px;
-  // margin: 0 auto;
+  margin-right: 10px;
   // padding: 10px;
 
   .titleBookStore {
