--- a/frontend/src/pages/MainBookStore/MainBook.module.scss
+++ b/frontend/src/pages/MainBookStore/MainBook.module.scss
@@ -1,6 +1,6 @@
 .wrapperBook {
   // border: 1px solid #000;
-  max-width: 1280px;
+  max-width: 1080px;
   width: 100%;
   // min-height: 1000px;
   display: grid;
@@ -28,7 +28,7 @@
   .bookMain {
     max-width: 100%;
     display: grid;
-    grid-template-columns: repeat(4, minmax(150px, 1fr));
+    grid-template-columns: repeat(3, minmax(175px, 1fr));
     gap: 10px 10px; /* Відступ між карточками */
     justify-content: flex-start; /* Змінюємо властивість justify-content */
     // border: 1px solid yellow;
@@ -87,7 +87,7 @@
 
         img {
           width: 100%;
-          height: 275px;
+          height: 300px;
           margin-bottom: 5px;
         }
       }
@@ -167,14 +167,14 @@
   }
 }
 
-@media (max-width: 1360px) {
-  .wrapperBook {
-    // grid-template-columns: 20% 80%;
-    .bookMain {
-      grid-template-columns: repeat(4, minmax(100px, 1fr));
-    }
-  }
-}
+// @media (max-width: 1360px) {
+//   .wrapperBook {
+//     // grid-template-columns: 20% 80%;
+//     .bookMain {
+//       grid-template-columns: repeat(3, minmax(150px, 1fr));
+//     }
+//   }
+// }
 
 @media (max-width: 1100px) {
   .wrapperBook {
