--- a/frontend/src/pages/MainBookStore/MainBook.module.scss
+++ b/frontend/src/pages/MainBookStore/MainBook.module.scss
@@ -97,6 +97,7 @@
 
 .filterBook {
   // border: 2px solid blue;
+  height: 870px;
   position: relative;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 6px;
