--- a/frontend/src/components/swiper/styleSwiper.css
+++ b/frontend/src/components/swiper/styleSwiper.css
@@ -34,24 +34,24 @@
   background-color: transparent;
 }
 
-.mySwiper2 {
+.mySwiper-main {
   height: 80%;
   width: 100%;
 }
 
-.mySwiper {
+.mySwiper-small {
   height: 20%;
   box-sizing: border-box;
   padding: 10px 0;
 }
 
-.mySwiper .swiper-slide {
+.mySwiper-small .swiper-slide {
   width: 25%;
   height: 100%;
   opacity: 0.4;
 }
 
-.mySwiper .swiper-slide-thumb-active {
+.mySwiper-small .swiper-slide-thumb-active {
   opacity: 1;
 }
 
