--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   margin: 0;
   padding: 0;
@@ -7,8 +11,8 @@ body {
   background: linear-gradient(to right, #646394, #1a2a31);
   color: rgba(255, 255, 255, 0.938);
   height: 100vh;
-  font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
-    'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    'Helvetica Neue', sans-serif;
   overflow-y: scroll;
 }
 
@@ -40,12 +44,3 @@ body::-webkit-scrollbar-thumb:vertical {
 body::-webkit-scrollbar-button {
   display: none; /* Приховати кнопки */
 }
-
-/* CONTACT PAGES TESTING */
-.contact {
-  height: 100%;
-  position: relative;
-  max-width: 600px;
-}
-
-/* CONTACT PAGES TESTING */
