--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -1,10 +1,10 @@
 .home {
-  /* border: 1px solid #000; */
   max-width: 1280px;
   width: 100%;
 
   h1 {
     opacity: 0.8;
+    margin-top: 0px;
   }
 
   div {
