--- a/frontend/src/pages/MainBookStore/MainBook.module.scss
+++ b/frontend/src/pages/MainBookStore/MainBook.module.scss
@@ -1,13 +1,10 @@
 .wrapperBook {
-  // border: 1px solid #000;
   max-width: 1080px;
   width: 100%;
-  // min-height: 1000px;
   display: grid;
   grid-template-columns: 25% 75%;
   gap: 20px;
   margin-right: 10px;
-  // padding: 10px;
 
   .titleBookStore {
     display: flex;
@@ -29,9 +26,8 @@
     max-width: 100%;
     display: grid;
     grid-template-columns: repeat(3, minmax(175px, 1fr));
-    gap: 10px 10px; /* Відступ між карточками */
-    justify-content: flex-start; /* Змінюємо властивість justify-content */
-    // border: 1px solid yellow;
+    gap: 10px 10px;
+    justify-content: flex-start;
     margin-right: 5px;
 
     .blockListBook {
@@ -96,13 +92,11 @@
 }
 
 .filterBook {
-  // border: 2px solid blue;
   height: 870px;
   position: relative;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 6px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
     rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   font-size: 18px;
   display: flex;
@@ -137,6 +131,7 @@
       font-size: 18px;
       padding: 8px;
       margin-top: 8px;
+      color: black;
     }
   }
 
@@ -167,15 +162,6 @@
     }
   }
 }
-
-// @media (max-width: 1360px) {
-//   .wrapperBook {
-//     // grid-template-columns: 20% 80%;
-//     .bookMain {
-//       grid-template-columns: repeat(3, minmax(150px, 1fr));
-//     }
-//   }
-// }
 
 @media (max-width: 1100px) {
   .wrapperBook {
